@@ -134,11 +134,6 @@ protected:
 	virtual void RenderThreadImpl() = 0;
 	virtual void GetThreadFilmSize(u_int *filmWidth, u_int *filmHeight, u_int *filmSubRegion) = 0;
 
-	virtual std::string AdditionalKernelOptions() { return ""; }
-	virtual std::string AdditionalKernelDefinitions() { return ""; }
-	virtual std::string AdditionalKernelSources() { return ""; }
-	virtual void CompileAdditionalKernels(cl::Program *program) { }
-
 	void AllocOCLBuffer(const cl_mem_flags clFlags, cl::Buffer **buff,
 			void *src, const size_t size, const std::string &desc);
 	void AllocOCLBufferRO(cl::Buffer **buff, void *src, const size_t size, const std::string &desc);
